# inventario_oop

./: .gitignore  README.md  inventory.json  main.py  pyproject.toml
clients/: client.py  client_dao.py
db/: config.py  connection.py  create_table.py  setup_db.py  test_connection.py
entities/: base_dao.py  base_entity.py
inventory/: class_inventory.py  inventory_manager.py  product.py  units.py
inventory/dao/: class_inventory_dao.py  product_dao.py  units_dao.py
invoices/: invoice_item.py  invoices.py
provider/: provider.py  provider_dao.py
utils/: fetchall_as_dict.py  fetchone_as_dict.py
