[project]
name = "inventory-oop"
version = "0.1.0"
description = "This project is a basic inventory manager built in Python and uses OOP."
authors = [
    {name = "Carlos",email = "rocarlos1205@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
